added loggin to mongo operations

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,3 +7,13 @@ spring:
       database: icep
       host: localhost
       port: 27017
+
+logging:
+  level:
+    org:
+      springframework:
+        data:
+          mongodb:
+            core:
+              MongoTemplate: DEBUG
+              MongoOperations: DEBUG
