--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,9 @@
 							<artifactId>lombok</artifactId>
 						</exclude>
 					</excludes>
+					<image>
+						<name>lchumi/${project.artifactId}</name>
+					</image>
 				</configuration>
 			</plugin>
 		</plugins>
