--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,5 +40,5 @@ jobs:
       - name: build and push Docker
         run: |
           IMAGE=ghcr.io/lchumi/back-revtramites
-          docker build -t $IMAGE
+          docker build -t $IMAGE .
           docker push $IMAGE
