--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,5 +5,6 @@ spring:
   application:
     name: Import-tramite
 
-  config:
-    import: classpath:/mongo_secure.yml
+  data:
+    mongodb:
+      uri: ${MONGO_URI:mongodb://localhost:27017/icep}
