feat: added servlet to receive files

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,3 +8,8 @@ spring:
   data:
     mongodb:
       uri: ${MONGO_URI:mongodb://localhost:27017/icep}
+
+  servlet:
+    multipart:
+      max-file-size: 50MB
+      max-request-size: 50MB
