update url into feign client and update yml

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,8 +7,8 @@ spring:
 
   data:
     mongodb:
-      #uri: ${MONGO_URI:mongodb://mongo_usr:1c3p.2025..@192.168.112.233:27019/icep?authSource=admin&authMechanism=SCRAM-SHA-1}
-      uri: ${MONGO_URI:mongodb://localhost:27017/icep}
+      uri: ${MONGO_URI:mongodb://mongo_usr:1c3p.2026..@192.168.112.194:27019/icep?authSource=admin&authMechanism=SCRAM-SHA-1}
+      #uri: ${MONGO_URI:mongodb://localhost:27017/icep}
 
   servlet:
     multipart:
